# Game-Analyzer

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  GameAnalyzer.bat  GameAnalyzer.nsi  LICENSE  PROBLEMS.md  QUICK_START.md  README.md  README_USER.md  bloomberg_test_log.txt  bloomberg_test_report.txt  build.bat  build_final.bat  build_progressive_tests.bat  build_robust_tests.bat  build_simple_validation.bat  build_tests.bat  build_tests_mingw64.bat  build_validation.bat  build_validation_simple.bat  checkpoint.md  create_release.bat  debug_test.cpp  download_and_run.bat  installer.bat  prompt.md  setup_dependencies.bat  simple_validation.cpp  update.md  validate_system.cpp
game_profiles/: Counter-Strike 2.txt  Dwarf Fortress.txt  Planescape Torment.txt  README.md  Valorant.txt
src/: ChartRenderer.cpp  ChartRenderer.h  ConfigManager.cpp  ConfigManager.h  DataExporter.cpp  DataExporter.h  GameAnalyzer.cpp  GameAnalyzer.h  MemoryReader.cpp  MemoryReader.h  ProcessManager.cpp  ProcessManager.h  advanced_ocr.cpp  advanced_ocr.h  benchmark_suite.cpp  component_validations.cpp  cuda_support.cpp  cuda_support.h  game_analytics.cpp  game_analytics.h  main.cpp  main.h  optimized_screen_capture.cpp  optimized_screen_capture.h  performance_benchmarks.cpp  performance_monitor.cpp  performance_monitor.h  popup_dialogs.cpp  popup_dialogs.h  progressive_test_runner.cpp  robust_test_runner.cpp  safe_component_initializer.h  test_framework.cpp  test_framework.h  test_runner.cpp  thread_manager.cpp  thread_manager.h  ui_framework.cpp  ui_framework.h  unit_tests.cpp  (+3 more)
src/tests/: cuda_support_tests.cpp  ocr_tests.cpp  performance_monitor_tests.cpp
